test/1.2/errors/T_EASSIGN_19.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device eassign;

// bug 5090
method init {
    local uint8 i = 0;
    /// ERROR EASSIGN
    i << 0 = 1;
}
